--- a/CesarBmx.Shared.Api/appsettings.json
+++ b/CesarBmx.Shared.Api/appsettings.json
@@ -3,8 +3,15 @@
     "ApplicationId": "MyProjectApi"
   },
 
-  "AuthenticationSettings": {
-    "Secret": "Secreeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeet"
-  }
+  "Authentication": {
+    "AuthenticationType": "JWT",
+    "Enabled": "False",
+    "TestUser": "cesarbmx",
+    "Secret": "Secreeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeet",
+    "Issuer": "dev.crypto-watcher.com"
+  },
 
+  "EnvironmentSettings": {
+    "EnvironmentName": "Development"
+  }
 }
