upgrade to .NET 6

--- a/CesarBmx.Shared.CodeGeneration/CesarBmx.Shared.CodeGeneration.csproj
+++ b/CesarBmx.Shared.CodeGeneration/CesarBmx.Shared.CodeGeneration.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Authors>cesarbmx</Authors>
     <Description>Common library (Code Generation)</Description>
     <RepositoryUrl>https://github.com/cesarbmx/shared</RepositoryUrl>
