--- a/CesarBmx.Shared.Health/CesarBmx.Shared.Health.csproj
+++ b/CesarBmx.Shared.Health/CesarBmx.Shared.Health.csproj
@@ -1,18 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Description>Common library (Health)</Description>
-    <Company></Company>
-    <Authors>cesarbmx</Authors>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
-    <RepositoryUrl>https://github.com/cesarbmx/shared</RepositoryUrl>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<Description>Common library (Health)</Description>
+		<Authors>cesarbmx</Authors>
+		<Version>6.0.0</Version>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<RepositoryUrl>https://github.com/Caching/shared</RepositoryUrl>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
-    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="5.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
+		<PackageReference Include="AspNetCore.HealthChecks.Uris" Version="5.0.1" />
+	</ItemGroup>
 
 </Project>
+
