--- a/CesarBmx.Shared.Api/appsettings.json
+++ b/CesarBmx.Shared.Api/appsettings.json
@@ -11,6 +11,7 @@
   },
 
   "EnvironmentSettings": {
-    "EnvironmentName": "Development"
+    "EnvironmentName": "Development",
+    "Domain": "localhost"
   }
 }
