--- a/CesarBmx.Shared.Health/CesarBmx.Shared.Health.csproj
+++ b/CesarBmx.Shared.Health/CesarBmx.Shared.Health.csproj
@@ -13,6 +13,7 @@
 	<ItemGroup>
 		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
 		<PackageReference Include="AspNetCore.HealthChecks.Uris" Version="6.0.3" />
+		<PackageReference Include="CoinpaprikaAPI" Version="1.3.21103" />
 	</ItemGroup>
 
 </Project>
