--- a/CesarBmx.Shared.Tests/CesarBmx.Shared.Tests.csproj
+++ b/CesarBmx.Shared.Tests/CesarBmx.Shared.Tests.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\CesarBmx.Shared.Authentication\CesarBmx.Shared.Authentication.csproj" />
     <ProjectReference Include="..\CesarBmx.Shared.Caching\CesarBmx.Shared.Caching.csproj" />
     <ProjectReference Include="..\CesarBmx.Shared.Common\CesarBmx.Shared.Common.csproj" />
+    <ProjectReference Include="..\CesarBmx.Shared.Domain\CesarBmx.Shared.Domain.csproj" />
     <ProjectReference Include="..\CesarBmx.Shared.Health\CesarBmx.Shared.Health.csproj" />
     <ProjectReference Include="..\CesarBmx.Shared.Logging\CesarBmx.Shared.Logging.csproj" />
   </ItemGroup>
