--- a/CesarBmx.Shared.Events/CesarBmx.Shared.Messaging.csproj
+++ b/CesarBmx.Shared.Events/CesarBmx.Shared.Messaging.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Notification\Events\" />
+    <Folder Include="Notification\Types\" />
+  </ItemGroup>
+
 </Project>
