--- a/CesarBmx.Shared.Events/CesarBmx.Shared.Messaging.csproj
+++ b/CesarBmx.Shared.Events/CesarBmx.Shared.Messaging.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <Folder Include="CryptoWatcher\Commands\" />
+    <Folder Include="CryptoWatcher\Events\" />
+    <Folder Include="CryptoWatcher\Types\" />
     <Folder Include="Notification\Events\" />
     <Folder Include="Notification\Types\" />
   </ItemGroup>
