--- a/CesarBmx.Shared.Api/appsettings.json
+++ b/CesarBmx.Shared.Api/appsettings.json
@@ -13,5 +13,9 @@
   "EnvironmentSettings": {
     "EnvironmentName": "Development",
     "Domain": "localhost"
+  },
+
+  "CachingSettings": {
+    "CachingTimeInSeconds": 60
   }
 }
