queue names and serilog elastic

--- a/CesarBmx.Shared.Api/appsettings.json
+++ b/CesarBmx.Shared.Api/appsettings.json
@@ -11,7 +11,8 @@
   },
 
   "EnvironmentSettings": {
-    "EnvironmentName": "Development",
+    "Name": "Development",
+    "ShortName": "DEV",
     "Domain": "localhost"
   },
 
