rabbitMq virtual host

--- a/CesarBmx.Shared.Api/appsettings.json
+++ b/CesarBmx.Shared.Api/appsettings.json
@@ -1,6 +1,9 @@
 ﻿{
   "AppSettings": {
-    "ApplicationId": "MyProjectApi"
+    "ApplicationId": "MyProjectApi",
+    "Team": "my-team",
+    "PathBase": "my-project",
+    "DatabaseName": "MyProject"
   },
 
   "Authentication": {
