remove OpenTelemtrySettings and just use LoggingSettings

--- a/CesarBmx.Shared.Api/appsettings.json
+++ b/CesarBmx.Shared.Api/appsettings.json
@@ -15,7 +15,7 @@
 
   "EnvironmentSettings": {
     "Name": "Development",
-    "ShortName": "DEV",
+    "ShortName": "dev",
     "Domain": "localhost"
   },
 
