--- a/CesarBmx.Shared.Domain/CesarBmx.Shared.Domain.csproj
+++ b/CesarBmx.Shared.Domain/CesarBmx.Shared.Domain.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CesarBmx.Shared.Common\CesarBmx.Shared.Common.csproj" />
+    <ProjectReference Include="..\CesarBmx.Shared.Events\CesarBmx.Shared.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
