--- a/CesarBmx.Shared.Application/CesarBmx.Shared.Application.csproj
+++ b/CesarBmx.Shared.Application/CesarBmx.Shared.Application.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.1" />
     <PackageReference Include="Hangfire.Core" Version="1.8.12" />
-    <PackageReference Include="MassTransit" Version="8.2.2" />
+    <PackageReference Include="MassTransit" Version="8.2.3-develop.1832" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
