--- a/CesarBmx.Shared.Caching/CesarBmx.Shared.Caching.csproj
+++ b/CesarBmx.Shared.Caching/CesarBmx.Shared.Caching.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0-preview.4.24266.19" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
