--- a/CesarBmx.Shared.Logging/CesarBmx.Shared.Logging.csproj
+++ b/CesarBmx.Shared.Logging/CesarBmx.Shared.Logging.csproj
@@ -12,7 +12,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-preview.4.24266.19" />
 	</ItemGroup>
 
 </Project>
