deprecated elastic sink and APM

--- a/CesarBmx.Shared.Api/appsettings_shared.json
+++ b/CesarBmx.Shared.Api/appsettings_shared.json
@@ -52,5 +52,12 @@
   "RedisSettings": {
     "Url": "redis",
     "Port": 6379
+  },
+
+  "ElasticApm": {
+    "ServiceName": "MyProjectApi",
+    "SecretToken": "o13QqDuUUk6nhXfYjy",
+    "ServerUrl": "http://apm-server:8200",
+    "Environment": "DEV"
   }
 }
