--- a/CesarBmx.Shared.Api/appsettings_shared.json
+++ b/CesarBmx.Shared.Api/appsettings_shared.json
@@ -4,7 +4,8 @@
     "ApplicationId": "MyProjectApi",
     "Team": "my-team",
     "PathBase": "my-project",
-    "DatabaseName": "MyProject"
+    "DatabaseName": "MyProject",
+    "JobsIntervalInMinutes": 1 // TODO: Remove
   },
 
   "AuthenticationSettings": {
@@ -31,7 +32,9 @@
 
   "ConnectionStrings": {
     //"CryptoWatcher": "Data Source=your_server;Initial Catalog=your_database;Integrated Security=True",
-    "CryptoWatcher": "Server=sql-server-2022;Database=CryptoWatcher;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True"
+    "CryptoWatcher": "Server=sql-server-2022;Database=CryptoWatcher;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True",
+    "Ordering": "Server=sql-server-2022;Database=Ordering;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True",
+    "Notification": "Server=sql-server-2022;Database=Notification;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True"
   },
 
   "EnvironmentSettings": {
@@ -46,8 +49,11 @@
   "RabbitMqSettings": {
     "Host": "rabbitmq",
     "Username": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "Port": "5672",
+    "VirtualHost": ""
   },
+
 
   "RedisSettings": {
     "Url": "redis",
